Creating the second task and adding the openApi documentation
